--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <label>Cantidad de Meses</label>
             <input class="rounded-2 border-1" id="meses" type="number" placeholder="Solo para Tabla por meses">
             <button class="btn btn-primary" id="calculateInteres">Ganancia</button>
-            <button class="btn btn-outline-primary" id="calculateInteresMonto">Suma interes + monto</button>
+            <button class="btn btn-outline-primary" id="calculateInteresMonto">Interes + monto</button>
             <button class="btn btn-danger" id="calculateMeses">Tabla por meses</button>
             <label class="disabled mt-2" id="labelInteres">Tu interes mensual seria de:</label>
             <input class="disabled rounded-2 border-1" id="interesMensual" type="text">
